# AlgGroupProject

./: README.md  closestPair.h  main.cpp
FinalProject/: CMakeLists.txt  SDL_Plotter.h  closestPair.h  color_rgb.cpp  color_rgb.h  convexHull.h  curve.cpp  curve.h  divideAndConquer_CHull_Tests  line.cpp  line.h  main.cpp  point.cpp  point.h
